--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
 1. check stripe integration - done
 2. frontend routes need to be fixed - done
 3. completion is still not done (crisp integration left) - done
-4. api for checking subscription and api-limit have to be made
+4. api for checking subscription and api-limit have to be made - done
